# healthkite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
docs/: .dockerignore  Dockerfile  README.md  astro.config.mjs  docs.json  index.mdx  introduction.mdx  mcp-overview.mdx  openapi.json  package-lock.json  package.json  quickstart.mdx  serve.cjs
docs/api-reference/: authentication.mdx  get-day-snapshot.mdx  get-quantity-series.mdx  get-workout.mdx  list-quantity-types.mdx  list-sleep-sessions.mdx  list-workouts.mdx  overview.mdx  status.mdx
docs/concepts/: auth-and-lifecycle.mdx  columnar-encoding.mdx  provenance-hoisting.mdx  wire-format.mdx
docs/src/content/docs/: index.mdx  mcp-overview.mdx  quickstart.mdx
docs/src/content/docs/api-reference/: authentication.mdx  get-day-snapshot.mdx  get-quantity-series.mdx  get-workout.mdx  list-quantity-types.mdx  list-sleep-sessions.mdx  list-workouts.mdx  overview.mdx  status.mdx
docs/src/content/docs/concepts/: auth-and-lifecycle.mdx  columnar-encoding.mdx  provenance-hoisting.mdx  wire-format.mdx
docs/src/styles/: custom.css
landing/: foundation.json  index.html  motion.js  package.json  recipes.css  scorecard.json  serve.cjs  site.css  tokens.css
mcp/: Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: backend.rs  client.ts  config.rs  crypto.rs  discovery.rs  healthkite.rs  http.rs  index.ts  lib.rs  main.rs  mcp.rs  server.ts  wirebody.rs
mcp/test/: client.test.ts
